--- a/brochurefiles/assets/basic-html/page-12.html
+++ b/brochurefiles/assets/basic-html/page-12.html
@@ -275,14 +275,8 @@
 						<p class="textItem " style="top:42.803030%;left:6.045752%;width:13.071895%;height:1.893939%;font-size:0.600000em;color:#000029;font-family:Myriad Pro;">
 							<b>1. Service Desk</b>
 						</p>
-						<p class="textItem " style="top:44.570707%;left:6.045752%;width:14.052288%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							Simply navigate to 
-						</p>
-						<a class="linkTextItem  " href="http://servicedesk.propergroupintl.com/" target="_blank"  style="top:44.570707%;left:19.934641%;width:23.039216%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							servicedesk.propergroupintl.com
-						</a>
-						<p class="textItem " style="top:44.570707%;left:42.973856%;width:6.045752%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							 in your
+						<p class="textItem " style="top:44.570707%;left:6.045752%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Simply navigate to servicedesk.propergroupintl.com in your
 						</p>
 						<p class="textItem " style="top:46.085859%;left:6.045752%;width:31.209150%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							web browser and create a ticket. Log on to
@@ -314,14 +308,8 @@
 						<p class="textItem " style="top:56.944444%;left:6.045752%;width:6.862745%;height:1.893939%;font-size:0.600000em;color:#000029;font-family:Myriad Pro;">
 							<b>3. Email</b>
 						</p>
-						<p class="textItem " style="top:58.712121%;left:6.045752%;width:3.758170%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							Email
-						</p>
-						<a class="linkTextItem  " href="mailto:it@propergroupintl.com" target="_blank"  style="top:58.712121%;left:9.640523%;width:17.156863%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							 it@propergroupintl.com
-						</a>
-						<p class="textItem " style="top:58.712121%;left:26.797386%;width:22.222222%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							 a detailed description of your
+						<p class="textItem " style="top:58.712121%;left:6.045752%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Email it@propergroupintl.com a detailed description of your
 						</p>
 						<p class="textItem " style="top:60.227273%;left:6.045752%;width:36.274510%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							request including any error messages or screen shots.
