--- a/brochurefiles/assets/basic-html/page-13.html
+++ b/brochurefiles/assets/basic-html/page-13.html
@@ -299,11 +299,8 @@
 						<p class="textItem " style="top:53.156566%;left:8.986928%;width:50.653595%;height:1.641414%;font-size:0.500000em;color:#FFFFFF;font-family:Myriad Pro;">
 							1. The Service Desk web address will be changed to servicedesk.
 						</p>
-						<a class="linkTextItem  " href="http://propergroupintl.com/" target="_blank"  style="top:54.671717%;left:10.620915%;width:14.705882%;height:1.641414%;font-size:0.500000em;color:#FFFFFF;font-family:Myriad Pro;">
-							propergroupintl.com 
-						</a>
-						<p class="textItem " style="top:54.671717%;left:25.326797%;width:31.209150%;height:1.641414%;font-size:0.500000em;color:#FFFFFF;font-family:Myriad Pro;">
-							so that it is easily remembered and accessible.
+						<p class="textItem " style="top:54.671717%;left:10.620915%;width:45.915033%;height:1.641414%;font-size:0.500000em;color:#FFFFFF;font-family:Myriad Pro;">
+							propergroupintl.com so that it is easily remembered and accessible.
 						</p>
 						<p class="textItem " style="top:56.565657%;left:8.986928%;width:48.039216%;height:1.641414%;font-size:0.500000em;color:#FFFFFF;font-family:Myriad Pro;">
 							2. All requests must be tickets in Service Desk to compose a score card.
