--- a/brochurefiles/assets/basic-html/page-17.html
+++ b/brochurefiles/assets/basic-html/page-17.html
@@ -275,9 +275,9 @@
 						<p class="textItem " style="top:89.520202%;left:59.640523%;width:5.228758%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							contact
 						</p>
-						<a class="linkTextItem  " href="mailto:softwaredev@propergroupintl.com" target="_blank"  style="top:89.520202%;left:65.522876%;width:25.000000%;height:1.641414%;font-size:0.500000em;color:#000029;font-family:Myriad Pro;">
+						<p class="textItem " style="top:89.520202%;left:65.522876%;width:25.000000%;height:1.641414%;font-size:0.500000em;color:#000029;font-family:Myriad Pro;">
 							<b>softwaredev@propergroupintl.com</b>
-						</a>
+						</p>
 						<p class="textItem " style="top:89.520202%;left:90.686275%;width:3.431373%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							with
 						</p>
