--- a/brochurefiles/assets/basic-html/page-22.html
+++ b/brochurefiles/assets/basic-html/page-22.html
@@ -407,9 +407,9 @@
 						<p class="textItem " style="top:25.883838%;left:50.980392%;width:39.052288%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							a full list of where you can reach a doctor online, visit info.
 						</p>
-						<a class="linkTextItem  " href="http://amercianwell.com/where-can-i-see-a-doctor-online." target="_blank"  style="top:27.398990%;left:50.980392%;width:35.457516%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+						<p class="textItem " style="top:27.398990%;left:50.980392%;width:35.457516%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							amercianwell.com/where-can-i-see-a-doctor-online.
-						</a>
+						</p>
 						<p class="textItem " style="top:30.176768%;left:50.980392%;width:37.908497%;height:1.893939%;font-size:0.600000em;color:#F9580F;font-family:Myriad Pro;">
 							<b>Will information frommy telehealth visit be</b>
 						</p>
@@ -470,9 +470,9 @@
 						<p class="textItem " style="top:65.277778%;left:50.980392%;width:40.196078%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							support team at (855) 818-DOCS (3627) or mailto:support@
 						</p>
-						<a class="linkTextItem  " href="http://americanwell.com/" target="_blank"  style="top:66.792929%;left:50.980392%;width:12.745098%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+						<p class="textItem " style="top:66.792929%;left:50.980392%;width:12.745098%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							americanwell.com.
-						</a>
+						</p>
 						<p class="textItem " style="top:70.202020%;left:52.450980%;width:15.359477%;height:1.893939%;font-size:0.600000em;color:#F9580F;font-family:Myriad Pro;">
 							<b>How do I sign up?</b>
 						</p>
@@ -482,12 +482,9 @@
 						<p class="textItem " style="top:74.116162%;left:60.947712%;width:10.784314%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							<b>Desktop users:</b>
 						</p>
-						<p class="textItem " style="top:75.631313%;left:60.947712%;width:5.555556%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							1. Visit 
+						<p class="textItem " style="top:75.631313%;left:60.947712%;width:16.993464%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							1. Visit hap.amwell.com.
 						</p>
-						<a class="linkTextItem  " href="http://hap.amwell.com/" target="_blank"  style="top:75.631313%;left:66.339869%;width:11.601307%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							hap.amwell.com.
-						</a>
 						<p class="textItem " style="top:77.146465%;left:60.947712%;width:30.065359%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							2. Create your account and click on Sign Up.
 						</p>
