--- a/brochurefiles/assets/basic-html/page-23.html
+++ b/brochurefiles/assets/basic-html/page-23.html
@@ -347,14 +347,8 @@
 						<p class="textItem " style="top:66.161616%;left:12.091503%;width:8.823529%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
 							<b>Get started!</b>
 						</p>
-						<p class="textItem " style="top:66.161616%;left:21.405229%;width:14.542484%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
-							Enroll in your plan at
-						</p>
-						<a class="linkTextItem  " href="http://propergroup.trsretire.com/" target="_blank"  style="top:66.161616%;left:35.947712%;width:18.954248%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
-							 propergroup.trsretire.com
-						</a>
-						<p class="textItem " style="top:66.161616%;left:54.738562%;width:16.503268%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
-							, or call 800-755-5801.
+						<p class="textItem " style="top:66.161616%;left:21.405229%;width:50.000000%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
+							Enroll in your plan at propergroup.trsretire.com, or call 800-755-5801.
 						</p>
 						<p class="textItem " style="top:68.055556%;left:9.803922%;width:0.816993%;height:1.767677%;font-size:0.509765em;color:#18161C;font-family:Whitney;">
 							•
