--- a/brochurefiles/assets/basic-html/page-9.html
+++ b/brochurefiles/assets/basic-html/page-9.html
@@ -236,106 +236,121 @@
 						<p class="textItem testString" style="top:2.777778%;left:92.320261%;width:1.797386%;height:1.262626%;font-size:0.450000em;color:#054E82;font-family:Myriad;">
 							|  9
 						</p>
-						<p class="textItem testString" style="top:56.944444%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>Every part of every Whelen product is</i>
+						<p class="textItem " style="top:59.469697%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Proper targeted this particular customer for almost a year prior
 						</p>
-						<p class="textItem " style="top:59.595960%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>proudly designed and manufactured</i>
+						<p class="textItem " style="top:61.111111%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							to our nomination. After many rounds of quotes and meetings,
 						</p>
-						<p class="textItem " style="top:62.373737%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>inAmerica.Today,Whelen’s advanced</i>
+						<p class="textItem " style="top:62.626263%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							it was our people and their expertise that made the difference
 						</p>
-						<p class="textItem " style="top:65.151515%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>LED technology and powerful lights</i>
+						<p class="textItem " style="top:64.267677%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							and won us the project. They are a premier boutique lighting
 						</p>
-						<p class="textItem " style="top:67.803030%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>and sirens are trusted to keep people</i>
+						<p class="textItem " style="top:65.782828%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							supplier, only disguised by their organizations name. With their
 						</p>
-						<p class="textItem " style="top:70.580808%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>safe all over the world. Proper is</i>
+						<p class="textItem " style="top:67.424242%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							lineage rooted in technology, their name reflects their patriarch’s
 						</p>
-						<p class="textItem " style="top:73.232323%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>proud to be part of another American</i>
+						<p class="textItem " style="top:68.939394%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							surname. This leads to a lot of confusion and strange looks when
 						</p>
-						<p class="textItem " style="top:76.010101%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>manufacturing company’s supply</i>
+						<p class="textItem " style="top:70.580808%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							they are mentioned in our customer portfolio. This company
 						</p>
-						<p class="textItem " style="top:78.787879%;left:5.882353%;width:43.137255%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>base, and continuing to support the</i>
+						<p class="textItem " style="top:72.095960%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							has grown with its technology patents, with its first being a tiny
 						</p>
-						<p class="textItem " style="top:81.439394%;left:5.882353%;width:36.601307%;height:2.525253%;font-size:0.900000em;color:#054E82;font-family:Myriad;">
-							<i>growth of local manufacturing.</i>
+						<p class="textItem " style="top:73.737374%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							portable can opener issued to soldiers in the SecondWorldWar.
 						</p>
-						<p class="textItem " style="top:85.227273%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							Proper was selected to support Whelen on their newest project
+						<p class="textItem " style="top:76.893939%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Three generations later, J.W Speaker has become a high
 						</p>
-						<p class="textItem " style="top:86.742424%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							because of our advanced engineering capability, and expertise
+						<p class="textItem " style="top:78.409091%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							tech lighting supplier, with market segments in automotive,
 						</p>
-						<p class="textItem " style="top:88.257576%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							in multi shot tooling and molding. Whelen will be advancing the
+						<p class="textItem " style="top:80.050505%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							agricultural, marine, and even spacefaring rover vehicles. Their
 						</p>
-						<p class="textItem " style="top:89.772727%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							market space by bringing the first multi shot outer lens to the
+						<p class="textItem " style="top:81.565657%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							largest customer is Harley Davidson, which is located only a few
 						</p>
-						<p class="textItem " style="top:91.287879%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							emergency warning light market. Proper has been selected to
+						<p class="textItem " style="top:83.207071%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							minutes down the road from their manufacturing plant. It’s their
 						</p>
-						<p class="textItem " style="top:92.803030%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							support the production tooling on this project, along with the
+						<p class="textItem " style="top:84.722222%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							technology and agile nature that makes them the supplier of
 						</p>
-						<p class="textItem " style="top:56.818182%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							molding and hard coating of the lens. It was our understanding
+						<p class="textItem " style="top:86.363636%;left:5.882353%;width:32.189542%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							choice for premier vehicles like the McLaren P1.
 						</p>
-						<p class="textItem " style="top:58.333333%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							and capability of complex multi shot tooling, turnkey molding
+						<p class="textItem " style="top:89.520202%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							All operations take place at the company’s headquarters in
 						</p>
-						<p class="textItem " style="top:59.848485%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							and hard coating capability that supported the nomination from
+						<p class="textItem " style="top:91.035354%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							GermantownWisconsin, which consist of two mirrored facilities.
 						</p>
-						<p class="textItem " style="top:61.363636%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							this new customer. Whelen will be showcasing this lamp at their
+						<p class="textItem " style="top:92.676768%;left:5.882353%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Once location takes careof all theirOEMbasedbusiness, and their
 						</p>
-						<p class="textItem " style="top:62.878788%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							OEM convention in September, with full production starting in
+						<p class="textItem " style="top:94.191919%;left:5.882353%;width:41.176471%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							other location takes care of all their aftermarket applications.
 						</p>
-						<p class="textItem " style="top:64.393939%;left:50.980392%;width:9.640523%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							October 2017.
+						<p class="textItem " style="top:59.469697%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							J.W Speaker found alignment with Proper based on our leading
+						</p>
+						<p class="textItem " style="top:61.111111%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							edge technology and multi shot capability. Their R&amp;D team has
+						</p>
+						<p class="textItem " style="top:62.626263%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							taken on their first multi shot inner lens for a new and upcoming
+						</p>
+						<p class="textItem " style="top:64.267677%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							premier luxury electric vehicle. Not having the history or
+						</p>
+						<p class="textItem " style="top:65.782828%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							equipment to manufacturer this part, they were looking for
 						</p>
 						<p class="textItem " style="top:67.424242%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							Our One Proper model supported the nomination of another
+							a partner that could be captive to the development, design,
 						</p>
 						<p class="textItem " style="top:68.939394%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							new customer, and allowed us to venture into yet another new
+							tooling, and molding process. This afforded Proper the ability to
 						</p>
-						<p class="textItem " style="top:70.454545%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							market space. By continuing to leverage all of our division, and
+						<p class="textItem " style="top:70.580808%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							exercise its, “One Proper” business approach and be that captive
 						</p>
-						<p class="textItem " style="top:71.969697%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							stick to the highly engineered disciplines we know, there is no
+						<p class="textItem " style="top:72.095960%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							supplier. The program has been in design for several weeks now
 						</p>
-						<p class="textItem " style="top:73.484848%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							product we can’t excel at.  We have an amazing team of people
+						<p class="textItem " style="top:73.737374%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							and we will be launching into the tooling phase come October
 						</p>
-						<p class="textItem " style="top:75.000000%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							that constantly showcase their talents to our new prospective
+						<p class="textItem " style="top:75.252525%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							of 2017. This is a big step for J.W Speaker, and they have selected
 						</p>
-						<p class="textItem " style="top:76.515152%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							customers; and it’s our people that allow us to bring in these new
+						<p class="textItem " style="top:76.893939%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							the right supplier to move forward with and make this multi
 						</p>
-						<p class="textItem " style="top:78.030303%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							opportunities.  Thank you for everyone’s support in obtaining
+						<p class="textItem " style="top:78.409091%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							shot product a staple offering to all of their customers. We are
 						</p>
-						<p class="textItem " style="top:79.545455%;left:50.980392%;width:21.241830%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							this new customer nomination.
+						<p class="textItem " style="top:80.050505%;left:50.980392%;width:43.137255%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							looking at several new projects with J.W and extremely pleased
 						</p>
-						<p class="textItem " style="top:82.575758%;left:50.980392%;width:9.803922%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+						<p class="textItem " style="top:81.565657%;left:50.980392%;width:17.810458%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							to be on board with them.
+						</p>
+						<p class="textItem " style="top:86.111111%;left:50.980392%;width:9.803922%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							<b>Chris Churilla</b>
 						</p>
-						<p class="textItem " style="top:84.090909%;left:50.980392%;width:9.967320%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+						<p class="textItem " style="top:87.626263%;left:50.980392%;width:9.967320%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							Sales Manager
 						</p>
-						<p class="textItem " style="top:85.606061%;left:50.980392%;width:5.228758%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+						<p class="textItem " style="top:89.141414%;left:50.980392%;width:5.228758%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							Tooling
 						</p>
 						<p class="textItem " style="top:18.939394%;left:8.169935%;width:47.712418%;height:5.429293%;font-size:1.753125em;color:#FFFFFF;font-family:Myriad Pro;">
