--- a/brochurefiles/assets/basic-html/page-19.html
+++ b/brochurefiles/assets/basic-html/page-19.html
@@ -362,8 +362,8 @@
 						<p class="textItem " style="top:84.848485%;left:50.980392%;width:9.313725%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
 							<b>Darren Mack</b>
 						</p>
-						<p class="textItem " style="top:86.363636%;left:50.980392%;width:29.084967%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
-							Title is Director of Manufacturing &amp; Service
+						<p class="textItem " style="top:86.363636%;left:50.980392%;width:24.346405%;height:1.641414%;font-size:0.500000em;color:#000000;font-family:Myriad Pro;">
+							Director of Manufacturing &amp; Service
 						</p>
 						<p class="textItem " style="top:36.994949%;left:5.882353%;width:88.398693%;height:2.146465%;font-size:0.700000em;color:#024C81;font-family:Myriad Pro;">
 							Congratulations to Mike Palmateer on his well-deserved retirement. To complete 40 years in a
